# aafinfo

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CODEX_HANDOFF.md  PROJECT_OVERVIEW.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md
examples/: _generate.py  _smoke.py
src/aafinfo/: __init__.py  cli.py  engine.py  errors.py  formatting.py  models.py  report.py
src/aafinfo/_static/: report.css
src/aafinfo/templates/: report.html.j2
tests/: conftest.py  test_engine.py  test_formatting.py  test_models.py
tests/integration/: test_cli_json.py  test_generated_fixtures.py  test_html_report.py
